# PresenterSoftware

./: Presenter.plan  README.md
PresenterClient/: PresenterClient.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  presentation.cpp  presentation.h  presentation.ui  screenshareserver.cpp  screenshareserver.h  strokerenderer.cpp  strokerenderer.h
PresenterClient/build-PresenterClient-Desktop-Debug/: Makefile
PresenterSender/: CMakeLists.txt  control.cpp  control.h  dashboard.cpp  dashboard.h  dashboard.ui  homewindow.cpp  homewindow.h  homewindow.ui  icons.qrc  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  screenshareclient.cpp  screenshareclient.h  screenshareclient.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
PresenterSender/Admin/: checkitem.h  checksysdialog.cpp  checksysdialog.h  checksysdialog.ui  edituserdialog.cpp  edituserdialog.h  edituserdialog.ui  resetpassworddialog.cpp  resetpassworddialog.h  resetpassworddialog.ui  usermanager.cpp  usermanager.h  usermanager.ui
PresenterSender/Filemanager/: fileitem.cpp  fileitem.h  filemanager.cpp  filemanager.h  filemanager.ui  uploaddialog.cpp  uploaddialog.h  uploaddialog.ui
PresenterSender/Presentation/: paintwidget.cpp  paintwidget.h  presentation.cpp  presentation.h  presentation.ui  presentationhandler.cpp  presentationhandler.h  presentationscreen.cpp  presentationscreen.h  presentationscreen.ui  stroke.cpp  stroke.h  undoredo.cpp  undoredo.h
PresenterSender/build-PresenterSender-Desktop-Release/: Makefile  PresenterSender  settings.xml
PresenterSender/icons/: loading.xcf
PresenterSender/ui/: clickablelabel.cpp  clickablelabel.h  loadinganimation.cpp  loadinganimation.h  sidewidget.cpp  sidewidget.h
PresenterServer/: CMakeLists.txt  Unbenannt 1.odt  checkFileClass.h  checkPresClass.h  checkUserClass.h  checksystem.cpp  checksystem.h  client.cpp  client.h  clienthandler.h  dbmanager.cpp  dbmanager.h  filehandler.cpp  filehandler.h  room.cpp  room.h  slidemanager.cpp  slidemanager.h  slideshowhandler.cpp  slideshowhandler.h  strokehandler.cpp  strokehandler.h  tcpserver.cpp  tcpserver.h  testTcpServer.cpp
PresenterServer/Database/: CDB.cpp  CDB.h  CDBFileHandler.cpp  CDBFileHandler.h  CDBRow.cpp  CDBRow.h
PresenterServer/MobileServer/: mobileserver.cpp  mobileserver.h
PresenterServer/build-PresenterServer-Desktop-Debug/: Makefile  PresenterServer
PresenterServer/build-PresenterServer-Desktop-Debug/Data/: Database.db  clients.cdb  files.cdb  presentations.cdb  users.cdb
PresenterServer/build-PresenterServer-Desktop-Debug/Data/Tools/: Document.sh  PDF.sh
